# FMI4cpp

./: .clang-format  .gitignore  .travis.yml  BUILDING.md  CITATION.cff  CMakeLists.txt  INSTALL.md  LICENSE  README.md  appveyor.yml  azure-pipelines.yml  cmake_uninstall.cmake.in  conanfile.py  conanfile.txt  run_conan_install.bat  run_conan_install.sh  vcpkg.json
.circleci/: config.yml
.github/workflows/: apt-get.yml  conan.yml  config.yml  upload.yml
cmake/: FMI4cppConfig.cmake.in  FindCURL_.cmake  FindLIBZIP.cmake  FindLibZip.cmake  FindLibzip.cmake  FindPugiXML.cmake  FindSUNDIALS.cmake  dependencies.cmake  export.cmake  fmi4cpp-config.cmake.in  install.cmake  project-config.cmake.in  set-log-level.cmake  targets.cmake
examples/: CMakeLists.txt  benchmark.cpp  controlled_temperature.cpp  fmu_test.cpp  from_url.cpp  mewrapper_test.cpp  multiple_fmus.cpp  test_parse_xml.cpp  torsionbar.cpp  zip_test.cpp
include/fmi4cpp/: AbstractFmuInstance.hpp  Fmu.hpp  FmuInstance.hpp  FmuResource.hpp  FmuSlave.hpp  FmuVariableAccessor.hpp  Status.hpp  dll_handle.hpp  fmi4cpp.hpp  fmu_base.hpp  fmu_instance.hpp  fmu_instance_base.hpp  fmu_resource.hpp  fmu_slave.hpp  fmu_variable_accessor.hpp  fs_portability.hpp  library_helper.hpp  logger.hpp  status.hpp  types.hpp  variable_accessor.hpp
include/fmi4cpp/common/: logger.hpp
include/fmi4cpp/common/driver/: DriverOptions.hpp  FmuDriver.hpp  driver_options.hpp  fmu_driver.hpp
include/fmi4cpp/common/import/: AbstractFmuInstance.hpp  Fmu.hpp  FmuInstance.hpp  FmuResource.hpp  FmuSlave.hpp  FmuVariableAccessor.hpp
include/fmi4cpp/common/solver/: ModelExchangeSolver.hpp  OdeintModelExchangeSolver.hpp
include/fmi4cpp/driver/: DriverOptions.hpp  FmuDriver.hpp  driver_options.hpp  error_types.hpp  fmu_driver.hpp
include/fmi4cpp/fmi2/: cs_fmu.hpp  cs_library.hpp  cs_slave.hpp  enumsToString.hpp  fmi2.hpp  fmi2FunctionTypes.h  fmi2StatusConverter.hpp  fmi2_library.hpp  fmi4cpp.hpp  fmi4cppUtils.hpp  fmu.hpp  library.hpp  me_fmu.hpp  me_instance.hpp  me_library.hpp  me_slave.hpp
include/fmi4cpp/fmi2/import/: AbstractFmuInstance.hpp  CoSimulationLibrary.hpp  CoSimulationSlave.hpp  CoSimulationSlaveBuilder.hpp  FmiLibrary.hpp  Fmu.hpp  FmuInstance.hpp  FmuResource.hpp  FmuSlave.hpp  FmuVariableAccessor.hpp  InstanceBuilder.hpp  ModelExchangeInstance.hpp  ModelExchangeInstanceBuilder.hpp  ModelExchangeLibrary.hpp  ModelExchangeSlave.hpp  OdeintSolver.hpp  Solver.hpp  Status.hpp  TemporalFolder.hpp  (+13 more)
include/fmi4cpp/solver/: ModelExchangeSolver.hpp  odeint_solver.hpp  solver.hpp
include/fmi4cpp/tools/: os_util.hpp  unzipper.hpp
include/fmicpp/: os_util.hpp
include/fmicpp/fmi2/: enumsToString.hpp  fmi2Functions.h  fmi2TypesPlatform.h  fmicpp.hpp
include/fmicpp/tools/: os_util.hpp  unzipper.hpp
src/: CMakeLists.txt  fmu_resource.cpp
src/driver/: fmu_driver.cpp
src/fmi2/: cs_fmu.cpp  cs_library.cpp  cs_slave.cpp  fmi2_library.cpp  fmu.cpp  library.cpp  me_fmu.cpp  me_instance.cpp  me_library.cpp  me_slave.cpp
src/fmi2/xml/: enums.cpp  model_description.cpp  model_description_parser.cpp  model_variables.cpp  scalar_variable.cpp
src/fmi4cpp/: FmuResource.cpp  fmu_resource.cpp  library_helper.hpp  logger.hpp  mlog.hpp  optional_converter.hpp
src/fmi4cpp/common/: FmuResource.cpp  logger.hpp
src/fmi4cpp/common/driver/: FmuDriver.cpp  fmu_driver.cpp
src/fmi4cpp/common/import/: FmiLibraryHelper.hpp  FmuResource.cpp
src/fmi4cpp/common/tools/: fmu_downloader.hpp  simple_id.hpp  unzipper.hpp
src/fmi4cpp/driver/: FmuDriver.cpp
src/fmi4cpp/fmi2/: cs_fmu.cpp  cs_library.cpp  cs_slave.cpp  fmi2_library.cpp  fmu.cpp  library_helper.hpp  me_fmu.cpp  me_instance.cpp  me_library.cpp  status_converter.hpp
src/fmi4cpp/fmi2/import/: CoSimulationFmu.cpp  CoSimulationLibrary.cpp  CoSimulationSlave.cpp  CoSimulationSlaveBuilder.cpp  FmiLibrary.cpp  FmiLibraryHelper.hpp  Fmu.cpp  FmuResource.cpp  ModelExchangeFmu.cpp  ModelExchangeInstance.cpp  ModelExchangeInstanceBuilder.cpp  ModelExchangeLibrary.cpp  ModelExchangeSlave.cpp  Solver.cpp  TemporalFolder.cpp  fmi2CoSimulationFmu.cpp  fmi2CoSimulationLibrary.cpp  fmi2CoSimulationSlave.cpp  fmi2Fmu.cpp  fmi2Library.cpp  fmi2ModelExchangeFmu.cpp  fmi2ModelExchangeInstance.cpp  fmi2ModelExchangeLibrary.cpp  fmi2ModelExchangeSlave.cpp  status_converter.hpp
src/fmi4cpp/fmi2/xml/: CoSimulationModelDescription.cpp  CommonModelDescription.cpp  DefaultExperiment.cpp  FmuAttributes.cpp  FmuAttributesParser.hpp  FmuTypeAttributes.cpp  ModelDescription.cpp  ModelDescriptionImpl.cpp  ModelDescriptionParser.cpp  ModelDescriptionParser.hpp  ModelExchangeModelDescription.cpp  ModelStructure.cpp  ModelVariables.cpp  ScalarVariable.cpp  ScalarVariableAttribute.cpp  ScalarVariableAttributes.cpp  ScalarVariableImpl.cpp  SourceFiles.cpp  SpecificModelDescription.cpp  TypedScalarVariable.cpp  Unknown.cpp  enums.cpp  model_description.cpp  model_description_parser.cpp  model_variables.cpp  optional_converter.cpp  optional_converter.hpp  scalar_variable.cpp
src/fmi4cpp/tools/: optional_converter.hpp  os_util.hpp  simple_id.hpp  time_util.hpp  unzipper.cpp  unzipper.hpp
src/fmicpp/fmi2/import/: AbstractFmuInstance.cpp  CoSimulationLibrary.cpp  CoSimulationSlave.cpp  CoSimulationSlaveBuilder.cpp  FmiLibrary.cpp  Fmu.cpp  ModelExchangeInstance.cpp  ModelExchangeInstanceBuilder.cpp  ModelExchangeLibrary.cpp
src/fmicpp/fmi2/xml/: DefaultExperiment.cpp  FmuData.cpp  FmuTypeAttributes.cpp  ModelDescription.cpp  ModelStructure.cpp  ModelVariables.cpp  ScalarVariable.cpp  ScalarVariableAttributes.cpp  SourceFiles.cpp  SpecificModelDescription.cpp  enums.cpp
tests/: CMakeLists.txt  test_controlled_temperature.cpp  test_modeldescription1.cpp  test_modeldescription2.cpp
tests/resources/2.0/cs/linux64/OpenModelica/v1.11.0/FmuExportCrossCompile/: modelDescription.xml
tool/: CMakeLists.txt  DriverOptions.hpp  FmuDriver.cpp  FmuDriver.hpp  cmd_parser.cpp  crosscheck.cpp  fmu_driver.cpp
tool/crosscheck/: CMakeLists.txt  crosscheck.cpp
tool/include/: DriverOptions.hpp  FmuDriver.hpp
tool/src/: FmuDriver.cpp
(+68 files in other folders)
